<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/ic_background"
    tools:context="OneTimeAlarmActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/greeting_clocky"
            android:layout_margin="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_set1"
                android:textColor="@color/halfwhite"
                android:text="@string/txt_set"
                android:textSize="22sp"
                android:fontFamily="@font/ps_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_welcome_clocky"
                android:text="@string/txt_one_time_alarm"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:fontFamily="@font/ps_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_set1"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:layout_constraintTop_toBottomOf="@id/greeting_clocky"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="352dp"
            android:layout_height="392dp"
            android:src="@drawable/bg_transparent_pink"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginTop="44dp"
            app:cardBackgroundColor="@color/halffwhite"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/card_date_one_time">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_set_date_one_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/tv_once_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/ps_regular"
                    android:text="@string/txt_datee"
                    android:textColor="@color/abu"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_set_date_one_time"
                    android:layout_width="95dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/ps_regular"
                    android:text="@string/txt_set_date"
                    android:textAllCaps="false"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            app:cardBackgroundColor="@color/halffwhite"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_date_one_time"
            android:id="@+id/card_time_one_time">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_set_time_one_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/tv_once_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/ps_regular"
                    android:text="Time"
                    android:textColor="@color/abu"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_set_time_one_time"
                    android:layout_width="95dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/ps_regular"
                    android:text="@string/txt_set_time"
                    android:textAllCaps="false"
                    android:textSize="11sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="270dp"
            android:layout_height="20dp"
            android:id="@+id/tv_note_one_time"
            android:fontFamily="@font/ps_medium"
            android:text="@string/txt_note"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_time_one_time"/>
        <EditText
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:id="@+id/et_note_one_time"
            android:backgroundTint="#FBE7DF"
            android:fontFamily="@font/ps_regular"
            android:textColor="@color/birtu"
            android:textSize="14sp"
            android:hint="@string/txt_input_note"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_note_one_time"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="280dp"
            android:layout_height="35dp"
            android:id="@+id/btn_add_set_one_time_alarm"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/et_note_one_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/bg_transparent_pink"
            android:textAllCaps="false"
            android:text="@string/txt_add_alarm"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:fontFamily="@font/ps_medium"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="280dp"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_white"
            android:fontFamily="@font/ps_medium"
            android:text="@string/txt_cancel"
            android:textAllCaps="false"
            android:textColor="@color/pink"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_add_set_one_time_alarm" />



    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>