<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".MainActivity">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/greeting_clocky"
           android:layout_margin="30dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/tv_hello"
               android:textColor="@color/halfwhite"
               android:text="@string/txt_hello"
               android:textSize="22sp"
               android:fontFamily="@font/ps_medium"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/tv_welcome_clocky"
               android:text="@string/txt_welcome_to_clocky"
               android:textSize="22sp"
               android:textColor="@color/white"
               android:fontFamily="@font/ps_medium"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/tv_hello"/>
       </androidx.constraintlayout.widget.ConstraintLayout>

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:layout_constraintTop_toBottomOf="@id/greeting_clocky"
           android:id="@+id/view_today"
           android:layout_margin="20dp">


           <TextView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:fontFamily="@font/ps_medium"
               android:text="@string/txt_05_59"
               android:gravity="center"
               android:textSize="55sp"
               android:textColor="@color/white"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               android:id="@+id/tv_time_today"/>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:fontFamily="@font/ps_medium"
               android:gravity="center"
               app:layout_constraintTop_toBottomOf="@id/tv_time_today"
               android:text="@string/txt_date"
               android:id="@+id/tv_date_today"
               android:textColor="@color/halffwhite"
               android:textSize="18sp"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"/>
       </androidx.constraintlayout.widget.ConstraintLayout>
       <androidx.constraintlayout.widget.ConstraintLayout
           android:id="@+id/view_type_alarm"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="20dp"
           tools:layout_editor_absoluteY="5dp"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@id/view_today">


           <ImageView
               android:id="@+id/iv_one_time"
               android:layout_width="112dp"
               android:layout_height="74dp"
               android:layout_margin="20dp"
               android:src="@drawable/ic_repeat_time"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toTopOf="parent" />

           <ImageView
               android:id="@+id/iv_repeat_time"
               android:layout_width="112dp"
               android:layout_height="74dp"
               android:layout_margin="40dp"
               android:src="@drawable/ic_one_time"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent" />

       </androidx.constraintlayout.widget.ConstraintLayout>




       <androidx.constraintlayout.widget.ConstraintLayout
           android:id="@+id/view_alarm_clocky"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="10dp"
           android:layout_marginTop="30dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.526"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/view_type_alarm">

           <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/rv_alarm_added"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="104dp"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.0"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               tools:listitem="@layout/item_added_clocky" />

       </androidx.constraintlayout.widget.ConstraintLayout>







   </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>